--- a/index.html
+++ b/index.html
@@ -140,14 +140,14 @@
   <main class="card" id="card">
     <div class="mascot"><span>🐣</span></div>
     <h1><span id="name">Ylva</span>, vil du være min valentin?</h1>
-    <p>Helt fra hjertet mitt til skjermen din… vil du si ja? 🌹</p>
+    <p>Jeg håper du velger den riktige knappen 🤞🏼</p>
 
     <div class="btn-row" id="btnRow">
       <button id="yesBtn" type="button">Ja</button>
       <button id="noBtn" type="button" aria-label="No">Nei</button>
     </div>
 
-    <div class="hint">“Nei” virker visst litt sjenert 🫢</div>
+    <div class="hint">Oi, "Nei" virker visst litt sjenert 🫢</div>
   </main>
 
   <script>
