--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
       <button id="noBtn" type="button" aria-label="No">Nei</button>
     </div>
 
-    <div class="hint">Oi, "Nei" virker visst litt sjenert 🫢</div>
+    <div class="hint">"Nei" virker visst litt sjenert her 🫢</div>
   </main>
 
   <script>
