--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
       card.innerHTML = `
         <div class="mascot"><span>🥳</span></div>
         <h1>YAY! 🎉</h1>
-        <p>Du gjorde meg om til den lykkeligste på planeten ❤️🤩</p>
+        <p>Du aner ikke hvor glad jeg ble nå! ❤️ Jeg gleder meg masse til å se fine deg igjen :)</p>
 
         <!-- Optional image/GIF: replace src with your own -->
         <div class="media">
